Fix: booking flow, CORS, WebSocket, and default login page improvements